<resources>
    <string name="app_name">SafeHopper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_create_account">Create Account</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_login">Log In</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_homepage">Home Page</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_create_route">Create Route</string>

    <string name="add_contact_firstname">First Name</string>
    <string name="add_contact_lastname">Last Name</string>
    <string name="add_contact_email">Email Address</string>
    <string name="add_contact_phone">Phone Number</string>
    <string name="add_contact_text_alert">Text Alerts</string>
    <string name="add_contact_email_alert">Email Alerts</string>
    <string name="add_contact_how_to_contact">How should we contact them?</string>

    <string name="contacts_email">Email</string>
    <string name="contacts_text_message">Text Message</string>

    <string name="homepage_start_session">Start Session</string>

    <string name="create_account">Create Account</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>

    <string name="create_new_account">Create one now</string>
    <string name="does_not_have_account">Don\'t have an account? Click here to sign up</string>
    <string name="login">Login</string>
    <string name="units">Units</string>
    <string name="route_buffer_zone">Route Buffer Zone</string>
    <string name="medium_security">Medium Security</string>
    <string name="safehopper_logo">SafeHopper Logo</string>
    <string name="login_ll">login_LL</string>

    <string name="menu_activity_create_route">Create Route Activity</string>
    <string name="undo_waypoint">Undo Waypoint</string>
    <string name="save_and_finish">Save and Finish</string>
    <string name="server_api_key">pxC3bE5Wzm7dWy2eaF5p</string>
    <string name="route_toggle">Snap To Route</string>

    <!-- Permissions -->
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="runner_background_image">runner background image</string>
    <string name="have_an_account_click_here_to_login">Have an account? Click here to login</string>

    <string name="confirm_account_dialog">Confirm Your Account</string>

    <!-- route_name_confirmation -->
    <string name="name_your_route">Name Your Route</string>
    <string name="route_name">Route Name</string>
    <string name="save_route_name">Save</string>


    <!--  session activity -->
    <string name="menu_session_activity">Session Activity</string>
    <string name="session_send_alert">Send Alert</string>
    <string name="session_stop_tracking">Stop Tracking</string>

    <!--  homepage  -->
    <string name="session_activity_WithOutRoute">Start Session</string>
    <string name="session_activity_WithRoute">Start Session With Route</string>
</resources>
