<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/ic_create_account"
            android:title="@string/menu_create_account" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_homepage" />

        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_routes"
            android:title="@string/menu_routes" />

        <item
            android:id="@+id/nav_activity_create_route"
            android:title="@string/menu_activity_create_route"
            android:icon="@drawable/ic_create_route"

            />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contacts" />

        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_add_contact"
            android:title="@string/menu_add_contact" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@id/nav_confirmation_fragment"
            android:icon="@drawable/ic_settings"
            android:title="Confirm" />
    </group>

</menu>
